update sdb test scenarios
Signed-off-by: dk77.yun <dk77.yun@samsung.com>

--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,5 @@ task webTest(type: WebTask, dependsOn: certTest) {
 task sdbTest(type: SDBTask) {
     test_name = 'tizen sdk sdb test';
     sdk_path = "${sdk_install_path}";
+    serial = "emulator-26101"
 }
