--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'groovy'
 ////////////////////////////////////////////////////
 // Global var. with default value
 def sdk_install_path = null;
-// mobile-2.3, mobile-2.3.1, mobile-2.4, wearable-2.3, wearable-2.3.1
 def device_platform = "mobile-2.4"
 def device_serial = "emulator-26101"
 ////////////////////////////////////////////////////
@@ -21,8 +20,14 @@ dependencies {
 
 task setup() {
 
+    if( project.hasProperty("sdk_path")) {
+        sdk_install_path = "${sdk_path}".toString();
+    }
     if( project.hasProperty("platform")) {
         device_platform = "${platform}".toString();
+    }
+    if( project.hasProperty("serial")) {
+        device_serial = "${serial}".toString();
     }
 
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
